--- a/show-app/src/ProfilePage/ProfilePage.css
+++ b/show-app/src/ProfilePage/ProfilePage.css
@@ -13,6 +13,7 @@
     width: 15%;
     position: relative;
     float:left;
+    margin-left:5em;
 }
 .grid-item {
     background-color: whitesmoke;
